--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 dist: bionic
 
 install:
-- sudo apt install qemu-kvm libvirt-clients libvirt-daemon-system bridge-utils virt-manager
+- egrep -c '(vmx|svm)' /proc/cpuinfo
+- sudo apt install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
+- kvm-ok
