--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ dist: bionic
 
 install:
 - egrep -c '(vmx|svm)' /proc/cpuinfo
-- sudo apt install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
+- sudo apt install qemu-kvm libvirt-daemon-system libvirt-clients
 - kvm-ok
